<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="a_demo__ble_enabled">BLE enabled</string>
  <string name="a_demo__ble_disabled">BLE disabled</string>

  <string name="app_name">Beacon\nKeeper</string>

  <string name="main__on_empty">No beacons</string>
  <string name="main__found">%1$s beacons found</string>

  <string name="preferences__scanning_time_ms_title">Scanning time in ms</string>
  <string name="preferences__idle_time_ms__title">Idle time in ms</string>
  <string name="preferences__beacon_ttl_ms__title">Beacon time to live</string>
  <string name="preferences__beacon_ttl_ms__summary">How long beacon considered visible</string>

  <string name="f_splash_app_name">Beacon\nKeeper</string>

  <string name="f_splash_bluetooth_disabled">Bluetooth\ndisabled</string>
  <string name="f_splash_bluetooth_enabled">Bluetooth\nenabled</string>
  <string name="f_splash_bluetooth_turning_on">Enabling\nbluetooth</string>
  <string name="f_splash_bluetooth_turning_off">Disabling\nbluetooth</string>

  <string name="settings">settings</string>
  <string name="btn_about">about</string>

  <string name="about_title">@string/app_name</string>
  <string name="about_text">Beacon Keeper is standalone application that shows usecases of it\'s own library.\nThe main goal of this project is to create solid and simple library for locating and working with iBeacons for Android.</string>
  <string name="about_click_here">Click it here:</string>
  <string name="about_link">link</string>
  <string name="about_copyright">Copyright(c) 2014\nDmitry Mozgin</string>

 </resources>
